--- a/src/components/signup.css
+++ b/src/components/signup.css
@@ -3,7 +3,7 @@
 /* General Styles */
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #f7fafc; /* Tailwind's gray-100 */
+  background-color: #ff6a00; /* Tailwind's gray-100 */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
