--- a/src/components/login.css
+++ b/src/components/login.css
@@ -2,12 +2,13 @@
 
 /* General Styles */
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #ff7b00; /* Tailwind's gray-100 */
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
   
   /* Centering the Form */
   .flex-center {
@@ -34,7 +35,7 @@ body {
     font-weight: bold;
     text-align: center;
     margin-bottom: 1.5rem;
-    color: #3498db; /* Tailwind's blue-500 */
+    color: #ff4400; /* Tailwind's blue-500 */
   }
   
   .input-field-login {
@@ -48,7 +49,7 @@ body {
   
   .input-field-login:focus {
     outline: none;
-    border-color: #3498db;
+    border-color: #ff4400;
     box-shadow: 0 0 0 2px rgba(66, 153, 225, 0.5);
   }
   
@@ -62,7 +63,7 @@ body {
   /* Buttons */
   .button-login {
     width: 100%;
-    background-color: #3498db;
+    background-color: #ff4400cc;
     color: white;
     padding: 0.75rem;
     border-radius: 0.5rem;
@@ -73,7 +74,7 @@ body {
   }
   
   .button-login:hover {
-    background-color: #2980b9;
+    background-color: #ff4400;
   }
   
   .button-login:focus {
@@ -88,7 +89,7 @@ body {
   }
   
   .success-message-login {
-    color: #38a169;
+    color: #ff4400;
     text-align: center;
     margin-bottom: 1rem;
   }
@@ -100,13 +101,13 @@ body {
   }
   
   .link-login a {
-    color: #3498db;
+    color: #ff4400;
     text-decoration: underline;
     font-weight: bold;
   }
   
   .link-login a:hover {
-    color: #2980b9;
+    color: #ff4400;
   }
   
   /* Animation for form entry */
@@ -142,7 +143,7 @@ body {
 }
 
 .signup-link a {
-  color: #007bff;
+  color: #ff4400;
   text-decoration: none;
 }
 
