--- a/src/components/body/css/about.css
+++ b/src/components/body/css/about.css
@@ -34,7 +34,9 @@
 }
 
 .video-placeholder {
-    background: #ddd;
+    /* background: #ddd; */
+    /* background: linear-gradient(45deg, #FFA500, #FF4500); */
+    border: 5px solid rgba(255, 85, 0, 0.757);
     height: 400px;
     display: flex;
     align-items: center;
@@ -109,6 +111,7 @@
 
 .image-item img {
     width: 100%;
+    height: 100%;
     border-radius: 10px;
     transition: transform 0.3s ease-in-out;
 }
@@ -151,3 +154,20 @@
         font-size: 1rem;
     }
 }
+
+
+.fallback {
+    width: 80%;
+    height: 300px;
+    /* object-fit: cover; Ensure the image covers the container without distortion */
+    transition: transform 0.3s ease-in-out; /* Add a transition for smooth effect */
+    filter: grayscale(100%);
+}
+
+.fallback:hover {
+    transform: scale(1.1); /* Scale the image up on hover */
+    filter: grayscale(0%);
+
+}
+
+
