--- a/src/components/body/css/hostel.css
+++ b/src/components/body/css/hostel.css
@@ -267,8 +267,8 @@
 .hostel-image {
   width: 100%;
   height: auto;
-  -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-  mask-image: linear-gradient(to bottom, rgb(250, 96, 0), rgba(0, 0, 0, 0));
+  /* -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+  mask-image: linear-gradient(to bottom, rgb(250, 96, 0), rgba(0, 0, 0, 0)); */
   transition: mask-image 0.3s ease, -webkit-mask-image 0.3s ease; /* Smooth transition */
 }
 
@@ -302,4 +302,15 @@
 
   display: block;
   margin: auto;
+}
+
+.hostel-image-text {
+  position: absolute;
+  width: 100%;
+  bottom: 30px;
+  background: rgba(0, 0, 0, 0.284);
+  color: #ffffff;
+  padding: 10px;
+  font-size: 1rem;
+  text-align: end;
 }
