--- a/src/components/body/css/filterComponent.css
+++ b/src/components/body/css/filterComponent.css
@@ -43,7 +43,7 @@
   display: flex;
   gap: 8px;
   background-color: rgb(255, 255, 255);
-  justify-content: space-evenly;
+  justify-content: safe;
   padding: 0px  0px 20px 0px;
 }
 
@@ -174,38 +174,11 @@ input[type="range"]::-ms-thumb {
 
   .filter-container.expanded {
     left: 0;
-    width: 90vw;
+    width: 100%;
+    height: 100%;
   }
 }
 
-
-
-.filter-toggle-btn {
-  position: fixed;
-  top: 140px;
-  left: 330px;
-  background-color: #ff6d10;
-  color: white;
-  border: none;
-  border-radius: 20px;
-  padding: 8px 15px;
-  font-size: 16px;
-  font-weight: bold;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  transition: left 0.3s ease-out;
-  z-index: 1100;
-}
-
-.filter-toggle-btn.active {
-  left: 10px; /* Moves the button 350px left from the initial position */
-}
-
-.filter-toggle-btn:hover {
-  background-color: #e65c00;
-}
 
 /* Filter Component Styling */
 /* Initial state */
@@ -324,12 +297,12 @@ input[type="range"]:hover {
 
 .filter-toggle-btn {
   position: fixed;
-  top: 150px;
-  left: 350px;
+  top: 100px;
+  left: 260px;
   background-color: #ff6d10;
   color: white;
   border: none;
-  border-radius: 20px;
+  border-radius: 5px;
   padding: 8px 15px;
   font-size: 16px;
   font-weight: bold;
@@ -343,7 +316,10 @@ input[type="range"]:hover {
 }
 
 .filter-toggle-btn.active {
+  position: fixed;
   left: 10px;
+  top: 140px;
+  border-radius: 20px;
   transform: scale(1.1);
 }
 
