added profile name to nav instead of user

--- a/src/components/header/css/navbar.css
+++ b/src/components/header/css/navbar.css
@@ -54,6 +54,7 @@
   .nav-btn:hover {
     color: #FF6347;
     border: 0.001px solid #FF6347;
+    cursor: pointer;
   }
   
   /* Mobile Menu Styling */
