--- a/src/components/body/css/filterComponent.css
+++ b/src/components/body/css/filterComponent.css
@@ -31,14 +31,7 @@
 } */
 
 
-.filter-item {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-  background-color: rgb(255, 255, 255);
-  font-size: 16px;
-  border-radius: 15px;
-}
+
 #itembtn {
   display: flex;
   gap: 8px;
@@ -183,13 +176,16 @@ input[type="range"]::-ms-thumb {
 /* Filter Component Styling */
 /* Initial state */
 .filter-container {
-  width: 25%;
+  width: 50%;
+  height: auto;
   max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   background-color: rgb(255, 255, 255);
   position: fixed;
   transform: translateX(-100%);
   top: 60px;
-  font-size: small;
   border-radius: 10px;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
   transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
@@ -221,9 +217,7 @@ input[type="range"]::-ms-thumb {
   display: flex;
   flex-direction: column;
   gap: 15px;
-  /* padding: 20px 0px 0px 0px; */
-  background-color: rgb(255, 255, 255);
-  font-size: 14px;
+  font-size: 15px;
   transition: transform 0.3s ease-in-out;
   animation: fadeIn 1s ease-in-out;
 }
