--- a/src/components/login.css
+++ b/src/components/login.css
@@ -61,8 +61,9 @@ body {
   }
   
   /* Buttons */
-  .button-login {
+  .button-login,.button-guest-login {
     width: 100%;
+    margin-top: 10px;
     background-color: #ff4400cc;
     color: white;
     padding: 0.75rem;
@@ -150,3 +151,15 @@ body {
 .signup-link a:hover {
   text-decoration: underline;
 }
+
+button-guest-login{
+  width: 100%;
+    background-color: #ff4400cc;
+    color: white;
+    padding: 0.75rem;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+} 
